# COP3530Proj3

./: CMakeLists.txt  Data.cpp  Data.h  Game.cpp  Game.h  main.cpp
project3/: Py_VS_R.csv  keyword_list.csv  pyGoogle.py  search_trends.csv  search_trends2.csv  search_trends3.csv  search_trends5.csv  search_trends7.csv
